--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
 
       - aws-s3/sync:
           from: build
-          to: "s3://cra-ci-demo/"
+          to: "s3://kriss-react-cicd/"
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400"
